# travel-agent

./: .env.example  .gitignore  README.md  pyproject.toml
examples/: barcelona.txt  mock_orchestrator.py  mock_run.json
src/travel_agent/: __init__.py  agent.py  cli.py  config.py  graph.py  models.py  prompts.py  state.py
src/travel_agent/skills/: budget_management.md  client_experience.md  destination_research.md  drive_radius_planning.md  itinerary_planning.md  loader.py  reservation_guidance.md
src/travel_agent/tools/: activities.py  budget.py  geo.py  langchain_tools.py  reservations.py
tests/: test_agent_api.py  test_offline.py  test_tools.py
